--- a/4-sfx/values.yaml
+++ b/4-sfx/values.yaml
@@ -2,7 +2,7 @@ monitors:
 - type: signalfx-forwarder
   listenAddress: 0.0.0.0:9080
   extraSpanTags:
-    environment: eks-app-dev-workshop
+    environment: test-app 
 
 - type: kubernetes-events
   whitelistedEvents:
