--- a/3-sck/sck.yaml
+++ b/3-sck/sck.yaml
@@ -5,10 +5,12 @@ global:
     hec:
       protocol: https
       insecureSSL: true 
-#      host: sh.beepbeepboop.org
+      host: itsi.beepbeepboop.org
+      #DSP token
+      token: 45e51096-ed3a-435f-92d9-392928b1e83f
 #      token: fcf52456-84c8-4524-970a-958e75f45a2f
-      host: splunk-s1-apps 
-      token: 00000000-0000-0000-0000-000000000000 
+      #host: splunk-s1-apps 
+      #token: 00000000-0000-0000-0000-000000000000 
       port: 8088
 
 #local config for logging chart
@@ -33,10 +35,10 @@ splunk-kubernetes-objects:
   objects:
     core:
       v1:
-        [{"name":"pods", "interval":"60s"},{"name":"nodes", "interval":"60s"},{"name":"component_statuses", "interval":"60s"},{"name":"config_maps", "interval":"60s"},{"name":"namespaces", "interval":"60s"},{"name":"persistent_volumes", "interval":"60s"},{"name":"persistent_volume_claims", "interval":"60s"},{"name":"resource_quotas", "interval":"60s"},{"name":"services", "interval":"60s"},{"name":"service_accounts", "interval":"60s"},{"name":"events", "mode":"watch"},]
+        [{"name":"pods", "interval":"300s"},{"name":"nodes", "interval":"300s"},{"name":"component_statuses", "interval":"300s"},{"name":"config_maps", "interval":"300s"},{"name":"namespaces", "interval":"300s"},{"name":"persistent_volumes", "interval":"300s"},{"name":"persistent_volume_claims", "interval":"300s"},{"name":"resource_quotas", "interval":"300s"},{"name":"services", "interval":"300s"},{"name":"service_accounts", "interval":"300s"},{"name":"events", "mode":"watch"},]
     apps:
       v1:
-        [{"name":"daemon_sets", "interval":"60s"},{"name":"deployments", "interval":"60s"},{"name":"replica_sets", "interval":"60s"},{"name":"stateful_sets", "interval":"60s"},]
+        [{"name":"daemon_sets", "interval":"300s"},{"name":"deployments", "interval":"300s"},{"name":"replica_sets", "interval":"300s"},{"name":"stateful_sets", "interval":"300s"},]
   splunk:
     hec:
       indexName: eks_meta
